--- a/07/beverages/elixirs.html
+++ b/07/beverages/elixirs.html
@@ -7,35 +7,37 @@
     <h1>Our Elixirs</h1>
 
     <h2>Green Tea Cooler</h2>
-    <p>   
-      <img src="green.jpg"> 
+    <p>
+      <img src="../images/green.jpg">
       Chock full of vitamins and minerals, this elixir
       combines the healthful benefits of green tea with
       a twist of chamomile blossoms and ginger root.
     </p>
     <h2>Raspberry Ice Concentration</h2>
     <p>
-      <img src="lightblue.jpg">
+      <img src="../images/lightblue.jpg">
       Combining raspberry juice with lemon grass,
       citrus peel and rosehips, this icy drink
       will make your mind feel clear and crisp.
     </p>
     <h2>Blueberry Bliss Elixir</h2>
     <p>
-      <img src="blue.jpg">
+      <img src="../images/blue.jpg">
       Blueberries and cherry essence mixed into a base
       of elderflower herb tea will put you in a relaxed
       state of bliss in no time.
     </p>
     <h2>Cranberry Antioxidant Blast</h2>
     <p>
-      <img src="red.jpg">
+      <img src="../images/red.jpg">
       Wake up to the flavors of cranberry and hibiscus
       in this vitamin C rich elixir.
     </p>
 		<p>
-			<a href="directions.html"> Back to the Lounge</a>
+			<a href="../about/directions.html"> Back to the Lounge</a>
 		</p>
+    <p>
     <img src="https://www.starbucks.co.jp/cafe/coffee-fun-week/images/main/title.png">
+    </p>
   </body>
 </html>
