--- a/07/about/directions.html
+++ b/07/about/directions.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Head First Lounge Directions</title>
+    <link type="text/css" rel="stylesheet" href="../lounge.css">
+    </style>
   </head>
   <body>
     <h1>Directions</h1>
