新休闲吧新增内容及修改

--- a/15/tony.html
+++ b/15/tony.html
@@ -11,7 +11,7 @@
     </p>
 
     <h2>August 20, 2012</h2>
-    <img src="../实训1/152segway2.jpg">
+    <img src="../15/152segway2.jpg">
     <p>
     Well I made it 1200 miles already, and I passed
     through some interesting places on the way:    
@@ -41,7 +41,7 @@
     </p>
 
     <h2>June 2, 2012</h2>
-    <img src="../实训1/151segway1.jpg">
+    <img src="../15/151segway1.jpg">
     <p>
     My first day of the trip!  I can't believe I finally got
     everything packed and ready to go.  Because I'm on a Segway,
