--- a/23/starbuzz/index.html
+++ b/23/starbuzz/index.html
@@ -88,6 +88,10 @@
       this site are the property of their respective owners.
     </div>
   </div>
+
+  <div class="ad">
+  
+  </div>
   </body>
 </html>
 
