--- a/25/starbuzz/index.html
+++ b/25/starbuzz/index.html
@@ -11,6 +11,16 @@
       <img src="images/header.gif" alt="Starbuzz Coffee header image">
     </div>
 
+    <div class="award">
+      <img src="images/award.gif" alt="Roaster of the Year award">
+    </div>
+
+    <div class="coupon">
+      <a href="freecoffee.html" title="Click here to get your free coffee">
+        <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
+      </a>
+    </div>
+
   <div class="tableContainer">
     <div class="tableRow">
       <div class="drinks">
