--- a/qimo/index.html
+++ b/qimo/index.html
@@ -7,17 +7,22 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <section>
-            <div class="container">
-                  <div class="title">
-                        <h2 class="list-title">Welcome to the British Museum Shop</h2>
-                  </div>
-                  <div class="subheading">
-                        <a href="https://www.britishmuseumshoponline.org/" class="hyperlink" target="_blank" rel="noopener">
-                              <span>Shop now</span>
-                        </a>
-                  </div>
-            </div>
-    </section>
+  <div class="container">
+      <h1 class="block1">Welcome to the British Museum Shop</h1>
+      <a class="block2" href="https://www.britishmuseumshoponline.org/">
+        <span>Shop now</span>
+        <img src="../qimo/images/icon-chevron-black.svg" class="icon1">
+      </a>
+      <div class="block3">
+        <div class="container">
+          <img class="block4" src="../qimo/images/icon-chevron-black.svg">
+          <img class="block5" src="../qimo/images/icon-chevron-black.svg">
+      </div>
+      </div>
+  </div>
+  
+    
+  
+</div>
 </body>
 </html>
