--- a/qimo/index.html
+++ b/qimo/index.html
@@ -14,6 +14,31 @@
         <img src="../qimo/images/icon-chevron-black.svg" class="icon1">
       </a>
       <div class="block3">
+        <div class="block6" style="cursor: grab;">
+          <ul class="block7">
+            <li class="block8" style="width: 295px;margin-right: 60px;">
+              <div class="block9">
+                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                  <div class="block11">
+                    <h3 class="block12">
+                      <span>Inspired by the Museum</span>
+                    </h3>
+                  </div>
+                  <div class="block13">
+                    <div class="block14">
+                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li class="block8" style="width: 295px;margin-right: 60px;"></li>
+            <li class="block8" style="width: 295px;margin-right: 60px;"></li>
+            <li class="block8" style="width: 295px;margin-right: 60px;"></li>
+            <li class="block8" style="width: 295px;margin-right: 60px;"></li>
+
+          </ul>
+        </div>
         <div class="container">
           <img class="block4" src="../qimo/images/icon-chevron-black.svg">
           <img class="block5" src="../qimo/images/icon-chevron-black.svg">
