--- a/qimo/index.html
+++ b/qimo/index.html
@@ -19,23 +19,83 @@
             <li class="block8" style="width: 295px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
-                  <div class="block11">
-                    <h3 class="block12">
-                      <span>Inspired by the Museum</span>
-                    </h3>
-                  </div>
                   <div class="block13">
                     <div class="block14">
                       <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
                     </div>
                   </div>
+                  <div class="block11">
+                    <h3 class="block12">
+                      <span>Inspired by the Museum</span>
+                    </h3>
+                  </div>
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;"></li>
-            <li class="block8" style="width: 295px;margin-right: 60px;"></li>
-            <li class="block8" style="width: 295px;margin-right: 60px;"></li>
-            <li class="block8" style="width: 295px;margin-right: 60px;"></li>
+            <li class="block8" style="width: 295px;margin-right: 60px;">
+              <div class="block9">
+                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                  <div class="block13">
+                    <div class="block14">
+                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                    </div>
+                  </div>
+                  <div class="block11">
+                    <h3 class="block12">
+                      <span>Inspired by the Museum</span>
+                    </h3>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li class="block8" style="width: 295px;margin-right: 60px;">
+              <div class="block9">
+                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                  <div class="block13">
+                    <div class="block14">
+                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                    </div>
+                  </div>
+                  <div class="block11">
+                    <h3 class="block12">
+                      <span>Inspired by the Museum</span>
+                    </h3>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li class="block8" style="width: 295px;margin-right: 60px;">
+              <div class="block9">
+                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                  <div class="block13">
+                    <div class="block14">
+                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                    </div>
+                  </div>
+                  <div class="block11">
+                    <h3 class="block12">
+                      <span>Inspired by the Museum</span>
+                    </h3>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li class="block8" style="width: 295px;margin-right: 60px;">
+              <div class="block9">
+                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                  <div class="block13">
+                    <div class="block14">
+                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                    </div>
+                  </div>
+                  <div class="block11">
+                    <h3 class="block12">
+                      <span>Inspired by the Museum</span>
+                    </h3>
+                  </div>
+                </a>
+              </div>
+            </li>
 
           </ul>
         </div>
