--- a/qimo/index.html
+++ b/qimo/index.html
@@ -16,12 +16,12 @@
       <div class="block3">
         <div class="block6" style="cursor: grab;">
           <ul class="block7">
-            <li class="block8" style="width: 295px;margin-right: 60px;">
+            <li class="block8" style="width: 437.5px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
                     </div>
                   </div>
                   <div class="block11">
@@ -32,12 +32,12 @@
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;">
+            <li class="block8" style="width: 437.5px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
                     </div>
                   </div>
                   <div class="block11">
@@ -48,12 +48,12 @@
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;">
+            <li class="block8" style="width: 437.5px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
                     </div>
                   </div>
                   <div class="block11">
@@ -64,12 +64,12 @@
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;">
+            <li class="block8" style="width: 437.5px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
                     </div>
                   </div>
                   <div class="block11">
@@ -80,12 +80,12 @@
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;">
+            <li class="block8" style="width: 437.5px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" sizes="100vw" width="500" height="500" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
                     </div>
                   </div>
                   <div class="block11">
@@ -96,18 +96,22 @@
                 </a>
               </div>
             </li>
-
           </ul>
         </div>
+        <div class="block16">
+          <div class="block17">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+        
         <div class="container">
           <img class="block4" src="../qimo/images/icon-chevron-black.svg">
           <img class="block5" src="../qimo/images/icon-chevron-black.svg">
       </div>
       </div>
   </div>
-  
-    
-  
-</div>
 </body>
 </html>
