--- a/qimo/index.html
+++ b/qimo/index.html
@@ -100,13 +100,12 @@
         </div>
         <div class="block16">
           <div class="block17">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="block18"></span>
+            <span class="block19"></span>
+            <span class="block19"></span>
+            <span class="block19"></span>
           </div>
-        </div>
-        
+        </div>  
         <div class="container">
           <img class="block4" src="../qimo/images/icon-chevron-black.svg">
           <img class="block5" src="../qimo/images/icon-chevron-black.svg">
