--- a/qimo/index.html
+++ b/qimo/index.html
@@ -105,11 +105,13 @@
             <span class="block19"></span>
             <span class="block19"></span>
           </div>
-        </div>  
-        <div class="container">
-          <img class="block4" src="../qimo/images/icon-chevron-black.svg">
-          <img class="block5" src="../qimo/images/icon-chevron-black.svg">
-      </div>
+        </div> 
+        <div class="block4">
+          <img src="../qimo/images/icon-chevron-black.svg" class="block20">
+        </div>
+        <div class="block5">
+          <img src="../qimo/images/icon-chevron-black.svg" class="block21">
+        </div> 
       </div>
   </div>
 </body>
