--- a/qimo/index.html
+++ b/qimo/index.html
@@ -10,18 +10,18 @@
   <div class="container">
       <h1 class="block1">Welcome to the British Museum Shop</h1>
       <a class="block2" href="https://www.britishmuseumshoponline.org/">
-        <span>Shop now</span>
+        <span class="block22">Shop now</span>
         <img src="../qimo/images/icon-chevron-black.svg" class="icon1">
       </a>
       <div class="block3">
         <div class="block6" style="cursor: grab;">
           <ul class="block7">
-            <li class="block8" style="width: 437.5px;margin-right: 60px;">
+            <li class="block8" style="width: 295px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Inspired by The British Museum.jpg">
                     </div>
                   </div>
                   <div class="block11">
@@ -32,39 +32,39 @@
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 437.5px;margin-right: 60px;">
+            <li class="block8" style="width: 295px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Lewis-chessmen-shop_edit.jpg">
                     </div>
                   </div>
                   <div class="block11">
                     <h3 class="block12">
-                      <span>Inspired by the Museum</span>
+                      <span>Inspired by the Lewis Chessmen</span>
                     </h3>
                   </div>
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 437.5px;margin-right: 60px;">
+            <li class="block8" style="width: 295px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Sutton-Hoo-Helmet.jpg">
                     </div>
                   </div>
                   <div class="block11">
                     <h3 class="block12">
-                      <span>Inspired by the Museum</span>
+                      <span>Inspired by Sutton Hoo</span>
                     </h3>
                   </div>
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 437.5px;margin-right: 60px;">
+            <li class="block8" style="width: 295px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
@@ -74,23 +74,23 @@
                   </div>
                   <div class="block11">
                     <h3 class="block12">
-                      <span>Inspired by the Museum</span>
+                      <span>Inspired by London</span>
                     </h3>
                   </div>
                 </a>
               </div>
             </li>
-            <li class="block8" style="width: 437.5px;margin-right: 60px;">
+            <li class="block8" style="width: 295px;margin-right: 60px;">
               <div class="block9">
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      <img class="block15" src="../qimo/images/Japanese Cat Tea Cups_British Museum_edit.jpg">
                     </div>
                   </div>
                   <div class="block11">
                     <h3 class="block12">
-                      <span>Inspired by the Museum</span>
+                      <span>Inspired by cats</span>
                     </h3>
                   </div>
                 </a>
