--- a/qimo/index.html
+++ b/qimo/index.html
@@ -37,12 +37,12 @@
                 <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
                   <div class="block13">
                     <div class="block14">
-                      <img class="block15" src="../qimo/images/Lewis-chessmen-shop_edit.jpg">
+                      <img class="block15" src="../qimo/images/Inspired by Hokusai.jpg">
                     </div>
                   </div>
                   <div class="block11">
                     <h3 class="block12">
-                      <span>Inspired by the Lewis Chessmen</span>
+                      <span>Inspired by Hokusai</span>
                     </h3>
                   </div>
                 </a>
