--- a/qimo/index.html
+++ b/qimo/index.html
@@ -7,112 +7,114 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="container">
-      <h1 class="block1">Welcome to the British Museum Shop</h1>
-      <a class="block2" href="https://www.britishmuseumshoponline.org/">
-        <span class="block22">Shop now</span>
-        <img src="../qimo/images/icon-chevron-black.svg" class="icon1">
-      </a>
-      <div class="block3">
-        <div class="block6" style="cursor: grab;">
-          <ul class="block7">
-            <li class="block8" style="width: 295px;margin-right: 60px;">
-              <div class="block9">
-                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
-                  <div class="block13">
-                    <div class="block14">
-                      <img class="block15" src="../qimo/images/Inspired by The British Museum.jpg">
+  <div class="body">
+    <div class="container">
+        <h1 class="block1">Welcome to the British Museum Shop</h1>
+        <a class="block2" href="https://www.britishmuseumshoponline.org/">
+          <span class="block22">Shop now</span>
+          <img src="../qimo/images/icon-chevron-black.svg" class="icon1">
+        </a>
+        <div class="block3">
+          <div class="block6" style="cursor: grab;">
+            <ul class="block7">
+              <li class="block8" style="width: 295px;margin-right: 60px;">
+                <div class="block9">
+                  <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                    <div class="block13">
+                      <div class="block14">
+                        <img class="block15" src="../qimo/images/Inspired by The British Museum.jpg">
+                      </div>
                     </div>
-                  </div>
-                  <div class="block11">
-                    <h3 class="block12">
-                      <span>Inspired by the Museum</span>
-                    </h3>
-                  </div>
-                </a>
-              </div>
-            </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;">
-              <div class="block9">
-                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
-                  <div class="block13">
-                    <div class="block14">
-                      <img class="block15" src="../qimo/images/Inspired by Hokusai.jpg">
+                    <div class="block11">
+                      <h3 class="block12">
+                        <span>Inspired by the Museum</span>
+                      </h3>
                     </div>
-                  </div>
-                  <div class="block11">
-                    <h3 class="block12">
-                      <span>Inspired by Hokusai</span>
-                    </h3>
-                  </div>
-                </a>
-              </div>
-            </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;">
-              <div class="block9">
-                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
-                  <div class="block13">
-                    <div class="block14">
-                      <img class="block15" src="../qimo/images/Sutton-Hoo-Helmet.jpg">
+                  </a>
+                </div>
+              </li>
+              <li class="block8" style="width: 295px;margin-right: 60px;">
+                <div class="block9">
+                  <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                    <div class="block13">
+                      <div class="block14">
+                        <img class="block15" src="../qimo/images/Inspired by Hokusai.jpg">
+                      </div>
                     </div>
-                  </div>
-                  <div class="block11">
-                    <h3 class="block12">
-                      <span>Inspired by Sutton Hoo</span>
-                    </h3>
-                  </div>
-                </a>
-              </div>
-            </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;">
-              <div class="block9">
-                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
-                  <div class="block13">
-                    <div class="block14">
-                      <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                    <div class="block11">
+                      <h3 class="block12">
+                        <span>Inspired by Hokusai</span>
+                      </h3>
                     </div>
-                  </div>
-                  <div class="block11">
-                    <h3 class="block12">
-                      <span>Inspired by London</span>
-                    </h3>
-                  </div>
-                </a>
-              </div>
-            </li>
-            <li class="block8" style="width: 295px;margin-right: 60px;">
-              <div class="block9">
-                <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
-                  <div class="block13">
-                    <div class="block14">
-                      <img class="block15" src="../qimo/images/Japanese Cat Tea Cups_British Museum_edit.jpg">
+                  </a>
+                </div>
+              </li>
+              <li class="block8" style="width: 295px;margin-right: 60px;">
+                <div class="block9">
+                  <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                    <div class="block13">
+                      <div class="block14">
+                        <img class="block15" src="../qimo/images/Sutton-Hoo-Helmet.jpg">
+                      </div>
                     </div>
-                  </div>
-                  <div class="block11">
-                    <h3 class="block12">
-                      <span>Inspired by cats</span>
-                    </h3>
-                  </div>
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="block16">
-          <div class="block17">
-            <span class="block18"></span>
-            <span class="block19"></span>
-            <span class="block19"></span>
-            <span class="block19"></span>
+                    <div class="block11">
+                      <h3 class="block12">
+                        <span>Inspired by Sutton Hoo</span>
+                      </h3>
+                    </div>
+                  </a>
+                </div>
+              </li>
+              <li class="block8" style="width: 295px;margin-right: 60px;">
+                <div class="block9">
+                  <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                    <div class="block13">
+                      <div class="block14">
+                        <img class="block15" src="../qimo/images/Coloursplash London Tea Towel_edit.jpg">
+                      </div>
+                    </div>
+                    <div class="block11">
+                      <h3 class="block12">
+                        <span>Inspired by London</span>
+                      </h3>
+                    </div>
+                  </a>
+                </div>
+              </li>
+              <li class="block8" style="width: 295px;margin-right: 60px;">
+                <div class="block9">
+                  <a href="https://www.britishmuseumshoponline.org/inspired-by/inspired-by-the-british-museum.html?_ga=2.117272261.236295749.1596441842-1583734833.1593694052" class="blok10">
+                    <div class="block13">
+                      <div class="block14">
+                        <img class="block15" src="../qimo/images/Japanese Cat Tea Cups_British Museum_edit.jpg">
+                      </div>
+                    </div>
+                    <div class="block11">
+                      <h3 class="block12">
+                        <span>Inspired by cats</span>
+                      </h3>
+                    </div>
+                  </a>
+                </div>
+              </li>
+            </ul>
           </div>
-        </div> 
-        <div class="block4">
-          <img src="../qimo/images/icon-chevron-black.svg" class="block20">
+          <div class="block16">
+            <div class="block17">
+              <span class="block18"></span>
+              <span class="block19"></span>
+              <span class="block19"></span>
+              <span class="block19"></span>
+            </div>
+          </div> 
+          <div class="block4">
+            <img src="../qimo/images/icon-chevron-black.svg" class="block20">
+          </div>
+          <div class="block5">
+            <img src="../qimo/images/icon-chevron-black.svg" class="block21">
+          </div> 
         </div>
-        <div class="block5">
-          <img src="../qimo/images/icon-chevron-black.svg" class="block21">
-        </div> 
-      </div>
+    </div>
   </div>
 </body>
 </html>
