--- a/2/index.html
+++ b/2/index.html
@@ -357,8 +357,8 @@
                     </a>
                 </div>
             </div>
-            <div class="swiper_pre"><span><i class="fa fa-angle-left"></i></span></div>
-            <div class="swiper_next"><span><i class="fa fa-angle-right"></i></span></div>
+            <div class="swiper_pre"><span><</i></span></div>
+            <div class="swiper_next"><span>></i></span></div>
             <div class="swiper_dot">
                 <ul>
                     <li></li>
@@ -410,8 +410,8 @@
                     </a>
                 </div>
             </div>
-            <div class="swiper_pre"><span><i class="fa fa-angle-left"></i></span></div>
-            <div class="swiper_next"><span><i class="fa fa-angle-right"></i></span></div>
+            <div class="swiper_pre"><span><</i></span></div>
+            <div class="swiper_next"><span>></i></span></div>
             <div class="swiper_dot">
                 <ul>
                     <li></li>
